<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- All the input fields are here -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/partNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/partName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/part_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mooneyPartNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/mooneyPartNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mooney_part_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/codeNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/codeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/vendorNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/vendorNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vendor_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/qtyWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wOrDWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/wOrD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/w_or_d" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/poOrSoNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/poOrSoNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/po_or_so_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/vendorWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/vendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vendor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/modelWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/unitSerialNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/unitSerialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unit_serial_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/aircraftSerialNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/aircraftSerialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aircraft_serial_number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/firstNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_next_button" />


    </LinearLayout>
</ScrollView>